added sudo to build script

--- a/src/build
+++ b/src/build
@@ -6,5 +6,5 @@ jar -cfe ../build/adv__server.jar com.adv__server.www.Main .
 
 cp -r resources/ ../build/
 
-echo "java -cp adv__server.jar com.adv_server.www.Main" > ../build/run
+echo "sudo java -cp adv__server.jar com.adv_server.www.Main" > ../build/run
 chmod +x ../build/run
